# numerical_methods_f

./: .gitignore  README.md
1_Roots_of_Equations/: CMakeLists.txt
1_Roots_of_Equations/src/: bracketing.f90  exercises.f90  nonlinearsystem.f90  openmethod.f90  polyroot.f90  roots.f90  testingfunctions.f90  utilities.f90
3_Optimization/: CMakeLists.txt
